@@ -5,6 +5,8 @@ plugins {
 	id("io.spring.dependency-management") version "1.0.15.RELEASE"
 	kotlin("jvm") version "1.6.21"
 	kotlin("plugin.spring") version "1.6.21"
+	id("com.google.cloud.tools.jib") version "3.3.1"
+
 }
 
 group = "ro.githubdemo"
@@ -35,7 +37,18 @@ dependencies {
 	developmentOnly("org.springframework.boot:spring-boot-devtools")
 	annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
 	testImplementation("org.springframework.boot:spring-boot-starter-test")
+	testImplementation("io.projectreactor:reactor-test:3.5.0")
+	testImplementation("org.mockito:mockito-core:4.8.1")
+	testImplementation("org.mockito:mockito-inline:4.8.1")
+	testImplementation("org.mockito:mockito-junit-jupiter:4.8.1")
+//	testImplementation("app.cash.turbine:turbine:0.12.1")
+	testImplementation("org.mockito.kotlin:mockito-kotlin:4.0.0")
 	testImplementation("io.projectreactor:reactor-test")
+	testImplementation("com.github.tomakehurst:wiremock-jre8:2.35.0")
+	testImplementation("org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4")
+	testImplementation("com.squareup.okhttp3:okhttp:4.10.0")
+	testImplementation("com.squareup.okhttp3:mockwebserver:4.10.0")
+
 }
 
 tasks.withType<KotlinCompile> {
@@ -47,4 +60,9 @@ tasks.withType<KotlinCompile> {
 
 tasks.withType<Test> {
 	useJUnitPlatform()
+	jvmArgs = mutableListOf("--enable-preview")
+}
+
+springBoot {
+	mainClass.set("ro.githubdemo.demo.DemoApplicationKt")
 }
